# learning

./: .gitignore  LICENSE  README.md  go.sh  pyproject.toml  setup.py
authoring/: markdown.ipynb
basic-tools/: anaconda.ipynb  git.ipynb  install-arm-m1.ipynb
data/: cargo_cult_science_feynman_1974.txt  output.docx
docs/: setup.md
hugging-face/: bloom.ipynb  classification.ipynb  pipeline.ipynb  transformers.ipynb
mooc/: fastai-2022.ipynb
nlp/: hertie_transformers_bert_classification.ipynb  hertie_transformers_bert_similarity.ipynb  hertie_transformers_gpt3_perplexity.ipynb
notebooks/quantum/: pennylane.ipynb
python/: 00_card.ipynb  mathplotlib.ipynb  numpy.ipynb  pandas.ipynb  requirement.ipynb
python/visualization/: altair.ipynb
pytorch/: PyTorch_Fashion_MINST.ipynb  PyTorch_LeNet_5.ipynb
src/mlx/: README.md  gemma2.py  llama3.py  qwen.py  qwq.py
src/quantum/: qiskit_demo.ipynb  qiskit_demo.py
src/revdisp/: README.md  revdisp.py  script.py  script2.py
src/selenium/: README.md  basic.py
src/tax_calculator/: CHANGELOG.md  README.md  core.py  diagram.mmd  go.sh  reference.docx
src/tax_calculator/calculators/: js_calculator.py  python_calculator.py
src/tools/: bf64.py  dispay_info.py  dotenv.py  input.md  markitdown.py  md2word_1.py  md2word_10.py  md2word_2.py  md2word_3.py  md2word_4.py  md2word_5.py  md2word_6.py  md2word_7.py  md2word_8.py  md2word_9.py  output.docx  output3.docx  python_docx.py
tests/revdisp/: test.py  test_calculator_comparison.py  test_framework.py
utils/revdisp/: index.html  mfq.html
(+34 files in other folders)
