[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tax_calculator"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A Canadian tax calculator"
requires-python = ">=3.7"

[tool.hatch.build.targets.wheel]
packages = ["src/tax_calculator"] 